--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,11 +32,21 @@ dependencies:
   flutter:
     sdk: flutter
 
+  firebase_auth: ^4.2.5
+  firebase_core: ^2.4.1
+  provider:
+  google_sign_in: ^5.4.3
+  cloud_firestore: ^4.3.1
+  flutterwave_standard: 1.0.5
+  http: ^0.13.5 
+  url_launcher: ^6.0.9
+
+   
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  firebase_core: ^2.8.0
   carousel_slider: ^4.2.1
 
 dev_dependencies:
@@ -63,13 +73,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/logo.png
-    - assets/damu.jpg
-    - assets/nice.jpg
-    - assets/eta.jpg
-    - assets/amu.jpg
-    - assets/keke.jpg
-    - assets/set.jpg
+    - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
